[ADD]: makefile y actualizamos readme